// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppealInformation Displays AOD docket when appellant is advanced on the docket 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              <span
                data-css-1ptmrda=""
              >
                AOD
              </span>
              ,
               
            </span>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                aria-label="Hearing Request"
                currentitem="false"
                data-css-2moai0=""
                data-event="focus mouseenter"
                data-event-off="mouseleave keydown"
                data-for="badge-200805-541"
                data-tip="true"
                tabindex="0"
              >
                H
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                  data-id="tooltip"
                  id="badge-200805-541"
                  role="tooltip"
                >
                  <style>
                    
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                  </style>
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            <span
              data-css-1ptmrda=""
            >
              AOD
            </span>
            ,
             
          </span>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              aria-label="Hearing Request"
              currentitem="false"
              data-css-2moai0=""
              data-event="focus mouseenter"
              data-event-off="mouseleave keydown"
              data-for="badge-200805-541"
              data-tip="true"
              tabindex="0"
            >
              H
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                data-id="tooltip"
                id="badge-200805-541"
                role="tooltip"
              >
                <style>
                  
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                </style>
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays date of death when present 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                aria-label="Hearing Request"
                currentitem="false"
                data-css-2moai0=""
                data-event="focus mouseenter"
                data-event-off="mouseleave keydown"
                data-for="badge-200805-541"
                data-tip="true"
                tabindex="0"
              >
                H
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                  data-id="tooltip"
                  id="badge-200805-541"
                  role="tooltip"
                >
                  <style>
                    
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                  </style>
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Date of Death
          </strong>
          <pre>
            01/01/2021
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              aria-label="Hearing Request"
              currentitem="false"
              data-css-2moai0=""
              data-event="focus mouseenter"
              data-event-off="mouseleave keydown"
              data-for="badge-200805-541"
              data-tip="true"
              tabindex="0"
            >
              H
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                data-id="tooltip"
                id="badge-200805-541"
                role="tooltip"
              >
                <style>
                  
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                </style>
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Date of Death
        </strong>
        <pre>
          01/01/2021
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays no representative when POA is null 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                aria-label="Hearing Request"
                currentitem="false"
                data-css-2moai0=""
                data-event="focus mouseenter"
                data-event-off="mouseleave keydown"
                data-for="badge-200805-541"
                data-tip="true"
                tabindex="0"
              >
                H
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                  data-id="tooltip"
                  id="badge-200805-541"
                  role="tooltip"
                >
                  <style>
                    
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                  </style>
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            No representative
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              aria-label="Hearing Request"
              currentitem="false"
              data-css-2moai0=""
              data-event="focus mouseenter"
              data-event-off="mouseleave keydown"
              data-for="badge-200805-541"
              data-tip="true"
              tabindex="0"
            >
              H
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                data-id="tooltip"
                id="badge-200805-541"
                role="tooltip"
              >
                <style>
                  
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                </style>
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          No representative
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays source appeal link when case type is CAVC remand 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              <span
                data-css-1ptmrda=""
              >
                CAVC
              </span>
              ,
            </span>
            <a
              href="/queue/appeals/123"
            >
              <span>
                Court Remand
              </span>
              <div>
                VLJ 
                Judge Name
              </div>
            </a>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                aria-label="Hearing Request"
                currentitem="false"
                data-css-2moai0=""
                data-event="focus mouseenter"
                data-event-off="mouseleave keydown"
                data-for="badge-200805-541"
                data-tip="true"
                tabindex="0"
              >
                H
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                  data-id="tooltip"
                  id="badge-200805-541"
                  role="tooltip"
                >
                  <style>
                    
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                  </style>
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            <span
              data-css-1ptmrda=""
            >
              CAVC
            </span>
            ,
          </span>
          <a
            href="/queue/appeals/123"
          >
            <span>
              Court Remand
            </span>
            <div>
              VLJ 
              Judge Name
            </div>
          </a>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              aria-label="Hearing Request"
              currentitem="false"
              data-css-2moai0=""
              data-event="focus mouseenter"
              data-event-off="mouseleave keydown"
              data-for="badge-200805-541"
              data-tip="true"
              tabindex="0"
            >
              H
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                data-id="tooltip"
                id="badge-200805-541"
                role="tooltip"
              >
                <style>
                  
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                </style>
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Displays veteran name when appellant is the veteran 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Appellant Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                aria-label="Hearing Request"
                currentitem="false"
                data-css-2moai0=""
                data-event="focus mouseenter"
                data-event-off="mouseleave keydown"
                data-for="badge-200805-541"
                data-tip="true"
                tabindex="0"
              >
                H
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                  data-id="tooltip"
                  id="badge-200805-541"
                  role="tooltip"
                >
                  <style>
                    
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                  </style>
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            No representative
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Appellant Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              aria-label="Hearing Request"
              currentitem="false"
              data-css-2moai0=""
              data-event="focus mouseenter"
              data-event-off="mouseleave keydown"
              data-for="badge-200805-541"
              data-tip="true"
              tabindex="0"
            >
              H
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                data-id="tooltip"
                id="badge-200805-541"
                role="tooltip"
              >
                <style>
                  
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                </style>
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          No representative
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppealInformation Matches snapshot with default props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="schedule-veteran-appeals-info"
      >
        <h2>
          Appeal Information
        </h2>
        <div
          data-css-1j4x2ld=""
        >
          <strong>
            Veteran Name
          </strong>
          <pre>
            Abellona Valtas
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Issues
          </strong>
          0
        </div>
        <div
          class="schedule-veteran-appeals-info-stream"
          data-css-acl5jg=""
        >
          <strong>
            Appeal Stream
          </strong>
          <pre>
            <span>
              Original
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Docket Number
          </strong>
          <pre>
            <span>
              <span
                aria-describedby="badge-200805-541"
                aria-label="Hearing Request"
                currentitem="false"
                data-css-2moai0=""
                data-event="focus mouseenter"
                data-event-off="mouseleave keydown"
                data-for="badge-200805-541"
                data-tip="true"
                tabindex="0"
              >
                H
              </span>
              <span
                data-css-lflsmu=""
              >
                <div
                  class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                  data-id="tooltip"
                  id="badge-200805-541"
                  role="tooltip"
                >
                  <style>
                    
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                  </style>
                  Hearing Request
                </div>
              </span>
              200805-541
            </span>
          </pre>
        </div>
        <div
          data-css-acl5jg=""
        >
          <strong>
            Power of Attorney
          </strong>
          <pre>
            Clarence Darrow
          </pre>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="schedule-veteran-appeals-info"
    >
      <h2>
        Appeal Information
      </h2>
      <div
        data-css-1j4x2ld=""
      >
        <strong>
          Veteran Name
        </strong>
        <pre>
          Abellona Valtas
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Issues
        </strong>
        0
      </div>
      <div
        class="schedule-veteran-appeals-info-stream"
        data-css-acl5jg=""
      >
        <strong>
          Appeal Stream
        </strong>
        <pre>
          <span>
            Original
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Docket Number
        </strong>
        <pre>
          <span>
            <span
              aria-describedby="badge-200805-541"
              aria-label="Hearing Request"
              currentitem="false"
              data-css-2moai0=""
              data-event="focus mouseenter"
              data-event-off="mouseleave keydown"
              data-for="badge-200805-541"
              data-tip="true"
              tabindex="0"
            >
              H
            </span>
            <span
              data-css-lflsmu=""
            >
              <div
                class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-bottom type-dark"
                data-id="tooltip"
                id="badge-200805-541"
                role="tooltip"
              >
                <style>
                  
  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                </style>
                Hearing Request
              </div>
            </span>
            200805-541
          </span>
        </pre>
      </div>
      <div
        data-css-acl5jg=""
      >
        <strong>
          Power of Attorney
        </strong>
        <pre>
          Clarence Darrow
        </pre>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
